add dockerfile and docker compose

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "editorconfig.editorconfig",
     "mikestead.dotenv",
     "mhutchie.git-graph",
-    "eamodio.gitlens"
+    "eamodio.gitlens",
+    "prisma.prisma",
   ]
 }
