--- a/package.json
+++ b/package.json
@@ -3,37 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "dev:windows": "npm i && concurrently \"docker-compose up\" \"npm run dev\"",
     "dev:linux": "npm i && concurrently \"docker compose up\" \"npm run dev\"",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint app --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint app --ext js,jsx,ts,tsx --fix",
+    "lint": "eslint app --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint app --fix",
     "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx,css,html}'",
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "14.2.17",
-    "prisma": "^6.0.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.0",
+    "prisma": "^6.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "concurrently": "^9.1.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.17",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
-    "postcss": "^8",
     "prettier": "^3.4.2",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0",
+    "@eslint/eslintrc": "^3"
   },
   "lint-staged": {
     "app/*.{js,ts,jsx,tsx}": "npm run lint"
